src/test/fail/bad_typecast.lly
#[
SyntaxError: Cannot cast type 'integer' to type 'string'.
Where: File "test/fail/bad_typecast.lly" at line 6
]#

10.@(string)
